Made improvements to the booking system. Added some unit tests.